--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 
             <li class="selected">
               <div class="heading">
-                <h1>Raihan's Development</h1>
-                <span>Welcome To Web Raihan's Development</span>
+                <h1>Raihan's Web Development</h1>
+                <span>Welcome To Web Raihan's Web Development</span>
               </div>
               <div class="cd-full-width first-slide">
                 <div class="container">
                   <div class="row">
                     <div class="col-md-12">
                       <div class="content first-content">
-                        <h4>Let’s Talk More About Raihan's Development</h4>
+                        <h4>Let’s Talk More About Raihan's Web Development</h4>
                         <p>Raihan's Development is free CSS template by Raihan Uddin. Credits go to <a href="https://videos.pexels.com/videos/busy-street-in-the-city-1089" target="_blank">Pexels.com</a> for a video background and <a href="http://unsplash.com" target="_blank">Unsplash</a> for images. This is Raihan, full stack developer. For 4 years experience I have done Laravel Project, Web Design, Web Development, PSD to HTML, Bootstrap, Responsive design, (UI/UX), Graphics Design and many more....</p>
                         <div class="primary-button">
                           <a href="#">Discover More</a>
