--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Raihan's Development CSS Template with a video background</title>
+        <title>Raihan's Web Development CSS Template with a video background</title>
 
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -60,7 +60,7 @@
                     <div class="col-md-12">
                       <div class="content first-content">
                         <h4>Let’s Talk More About Raihan's Web Development</h4>
-                        <p>Raihan's Development is free CSS template by Raihan Uddin. Credits go to <a href="https://videos.pexels.com/videos/busy-street-in-the-city-1089" target="_blank">Pexels.com</a> for a video background and <a href="http://unsplash.com" target="_blank">Unsplash</a> for images. This is Raihan, full stack developer. For 4 years experience I have done Laravel Project, Web Design, Web Development, PSD to HTML, Bootstrap, Responsive design, (UI/UX), Graphics Design and many more....</p>
+                        <p>Raihan's Web Development is free CSS template by Raihan Uddin. Credits go to <a href="https://videos.pexels.com/videos/busy-street-in-the-city-1089" target="_blank">Pexels.com</a> for a video background and <a href="http://unsplash.com" target="_blank">Unsplash</a> for images. This is Raihan, full stack developer. For 4 years experience I have done Laravel Project, Web Design, Web Development, PSD to HTML, Bootstrap, Responsive design, (UI/UX), Graphics Design and many more....</p>
                         <div class="primary-button">
                           <a href="#">Discover More</a>
                         </div>
@@ -135,7 +135,7 @@
                           </div>
                           <div class="col-md-5">
                             <div class="right-feature-text">
-                              <h4>Featured Product: <em>Raihan's Development</em></h4>
+                              <h4>Featured Product: <em>Raihan's Web Development</em></h4>
                               <p>If you want to create a new website, web application, fix any issue, bugs of your website or you are looking for PHP Developer / Website Developer then you are at Right Gig
 I am a full stack developer and have enough experience in web development to provide you the desired outcome.</p>
                               <div class="feature-list">
@@ -269,7 +269,7 @@ I am a full stack developer and have enough experience in web development to pro
         <footer>
           <p>Copyright &copy; 2017 Your Company 
                                 
-        	| Designed by <a href="https://web.facebook.com/raihansarkar.cse" target="_parent"><em>Raihan's Development</em></a></p>
+        	| Designed by <a href="https://web.facebook.com/raihansarkar.cse" target="_parent"><em>Raihan's Web Development</em></a></p>
         </footer>
     
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
